Mon Dec 29 12:53:00 1997  Ian Lance Taylor  <ian@cygnus.com>

	* client.c (start_tcp_server): Remove useless assignment, left
	behind by Dec 15 patch.

Sat Dec 27 17:41:11 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c, options.h.in, history.c, import.c, main.c, rcs.c,
	update.c: Remove !HAVE_RCS5 code.  It had bit-rotted a while ago,
	and more to the point is obsolete with the RCS library.

27 Dec 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* zlib.c, server.h (gunzip_and_write): New function.
	* client.c (update_entries): Call it instead of a gunzip subprocess.
	* zlib.c, server.h (read_and_gzip): New function.
	* client.c (send_modified): Call it instead of a gzip subprocess.

Sat Dec 27 13:07:38 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Decrease RCS_deltas memory usage to what we need (approximately
	the size of the file we are patching plus the size of the largest
	patch).  Previously memory usage had been approximately the size
	of the RCS file because we never freed lines until the end.
	* rcs.c (linevector_free, linevector_copy, linevector_add,
	linevector_delete):
	Instead of having all the lines and struct line's in the alloc_*
	space, have each line and its struct line in its own malloc'd
	space.  Use a refcount to deal with curlines vs. headlines
	vs. trunklines in RCS_deltas.
	(struct allocblock, blocks, block_alloc, block_free): Remove; no
	longer used.
	(apply_rcs_changes, RCS_deltas): Don't copy lines into allocated
	space; linevector_add now does that for us.
	(rcs_change_text, RCS_deltas): Don't call block_free.

Tue Dec 23 08:28:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvsbug.sh: Change bug-cvs address from prep.ai.mit.edu to gnu.org
	per email from Martin Hamilton.

Sun Dec 21 21:49:50 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkin): Disable keyword expansion when generating
	the change text.
	* sanity.sh: Move tests keyword-24 through keyword-27 into